syntax = "proto3";
option java_multiple_files = true;
package br.com.mba.engsoft.grpcservice;

message ProductRequest {
  int32 page = 1;
}

message Product {
  string id = 1;
  string name = 2;
  string slug = 3;
  string permalink = 4;
  string dateCreated = 5;
  string dateModified = 6;
  string type = 7;
  string status = 8;
  bool featured = 9;
  string catalogVisibility = 10;
  string description = 11;
  string shortDescription = 12;
  string sku = 13;
  float price = 14;
  float regularPrice = 15;
  float salePrice = 16;
  string dateOnSaleFrom = 17;
  string dateOnSaleTo = 18;
  string image = 19;
}

message ProductResponse {
  repeated Product products = 1;
}

service ProductService {
  rpc list(ProductRequest) returns (stream ProductResponse);
}